Use OpenAPI schemas
