# src/main/java/com/docker/llmrunner/api/models/Model.java
@@ -1,4 +1,4 @@
-package com.docker.llmrunner.api.engines.v1.modelsrequests;
+package com.docker.llmrunner.api.models;
 
 import com.microsoft.kiota.serialization.AdditionalDataHolder;
 import com.microsoft.kiota.serialization.Parsable;
@@ -8,7 +8,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 @jakarta.annotation.Generated("com.microsoft.kiota")
-public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
+public class Model implements AdditionalDataHolder, Parsable {
     /**
      * Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
      */
@@ -18,32 +18,32 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
      */
     private Long created;
     /**
+     * The files property
+     */
+    private java.util.List<String> files;
+    /**
      * The id property
      */
     private String id;
     /**
-     * The object property
+     * The tags property
      */
-    private String objectEscaped;
+    private java.util.List<String> tags;
     /**
-     * The owned_by property
+     * Instantiates a new {@link Model} and sets the default values.
      */
-    private String ownedBy;
-    /**
-     * Instantiates a new {@link ModelsGetResponseData} and sets the default values.
-     */
-    public ModelsGetResponseData() {
+    public Model() {
         this.setAdditionalData(new HashMap<>());
     }
     /**
      * Creates a new instance of the appropriate class based on discriminator value
      * @param parseNode The parse node to use to read the discriminator value and create the object
-     * @return a {@link ModelsGetResponseData}
+     * @return a {@link Model}
      */
     @jakarta.annotation.Nonnull
-    public static ModelsGetResponseData createFromDiscriminatorValue(@jakarta.annotation.Nonnull final ParseNode parseNode) {
+    public static Model createFromDiscriminatorValue(@jakarta.annotation.Nonnull final ParseNode parseNode) {
         Objects.requireNonNull(parseNode);
-        return new ModelsGetResponseData();
+        return new Model();
     }
     /**
      * Gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
@@ -69,10 +69,18 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
     public Map<String, java.util.function.Consumer<ParseNode>> getFieldDeserializers() {
         final HashMap<String, java.util.function.Consumer<ParseNode>> deserializerMap = new HashMap<String, java.util.function.Consumer<ParseNode>>(4);
         deserializerMap.put("created", (n) -> { this.setCreated(n.getLongValue()); });
+        deserializerMap.put("files", (n) -> { this.setFiles(n.getCollectionOfPrimitiveValues(String.class)); });
         deserializerMap.put("id", (n) -> { this.setId(n.getStringValue()); });
-        deserializerMap.put("object", (n) -> { this.setObject(n.getStringValue()); });
-        deserializerMap.put("owned_by", (n) -> { this.setOwnedBy(n.getStringValue()); });
+        deserializerMap.put("tags", (n) -> { this.setTags(n.getCollectionOfPrimitiveValues(String.class)); });
         return deserializerMap;
+    }
+    /**
+     * Gets the files property value. The files property
+     * @return a {@link java.util.List<String>}
+     */
+    @jakarta.annotation.Nullable
+    public java.util.List<String> getFiles() {
+        return this.files;
     }
     /**
      * Gets the id property value. The id property
@@ -83,20 +91,12 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
         return this.id;
     }
     /**
-     * Gets the object property value. The object property
-     * @return a {@link String}
+     * Gets the tags property value. The tags property
+     * @return a {@link java.util.List<String>}
      */
     @jakarta.annotation.Nullable
-    public String getObject() {
-        return this.objectEscaped;
-    }
-    /**
-     * Gets the owned_by property value. The owned_by property
-     * @return a {@link String}
-     */
-    @jakarta.annotation.Nullable
-    public String getOwnedBy() {
-        return this.ownedBy;
+    public java.util.List<String> getTags() {
+        return this.tags;
     }
     /**
      * Serializes information the current object
@@ -105,9 +105,9 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
     public void serialize(@jakarta.annotation.Nonnull final SerializationWriter writer) {
         Objects.requireNonNull(writer);
         writer.writeLongValue("created", this.getCreated());
+        writer.writeCollectionOfPrimitiveValues("files", this.getFiles());
         writer.writeStringValue("id", this.getId());
-        writer.writeStringValue("object", this.getObject());
-        writer.writeStringValue("owned_by", this.getOwnedBy());
+        writer.writeCollectionOfPrimitiveValues("tags", this.getTags());
         writer.writeAdditionalData(this.getAdditionalData());
     }
     /**
@@ -125,6 +125,13 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
         this.created = value;
     }
     /**
+     * Sets the files property value. The files property
+     * @param value Value to set for the files property.
+     */
+    public void setFiles(@jakarta.annotation.Nullable final java.util.List<String> value) {
+        this.files = value;
+    }
+    /**
      * Sets the id property value. The id property
      * @param value Value to set for the id property.
      */
@@ -132,17 +139,10 @@ public class ModelsGetResponseData implements AdditionalDataHolder, Parsable {
         this.id = value;
     }
     /**
-     * Sets the object property value. The object property
-     * @param value Value to set for the object property.
+     * Sets the tags property value. The tags property
+     * @param value Value to set for the tags property.
      */
-    public void setObject(@jakarta.annotation.Nullable final String value) {
-        this.objectEscaped = value;
-    }
-    /**
-     * Sets the owned_by property value. The owned_by property
-     * @param value Value to set for the owned_by property.
-     */
-    public void setOwnedBy(@jakarta.annotation.Nullable final String value) {
-        this.ownedBy = value;
+    public void setTags(@jakarta.annotation.Nullable final java.util.List<String> value) {
+        this.tags = value;
     }
 }
