# src/main/java/com/docker/llmrunner/api/models/ModelListData.java
@@ -1,4 +1,4 @@
-package com.docker.llmrunner.api.modelsrequests.item.item;
+package com.docker.llmrunner.api.models;
 
 import com.microsoft.kiota.serialization.AdditionalDataHolder;
 import com.microsoft.kiota.serialization.Parsable;
@@ -8,7 +8,7 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 @jakarta.annotation.Generated("com.microsoft.kiota")
-public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
+public class ModelListData implements AdditionalDataHolder, Parsable {
     /**
      * Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
      */
@@ -18,32 +18,32 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
      */
     private Long created;
     /**
-     * The files property
-     */
-    private java.util.List<String> files;
-    /**
      * The id property
      */
     private String id;
     /**
-     * The tags property
+     * The object property
      */
-    private java.util.List<String> tags;
+    private String objectEscaped;
     /**
-     * Instantiates a new {@link WithNameGetResponse} and sets the default values.
+     * The owned_by property
      */
-    public WithNameGetResponse() {
+    private String ownedBy;
+    /**
+     * Instantiates a new {@link ModelListData} and sets the default values.
+     */
+    public ModelListData() {
         this.setAdditionalData(new HashMap<>());
     }
     /**
      * Creates a new instance of the appropriate class based on discriminator value
      * @param parseNode The parse node to use to read the discriminator value and create the object
-     * @return a {@link WithNameGetResponse}
+     * @return a {@link ModelListData}
      */
     @jakarta.annotation.Nonnull
-    public static WithNameGetResponse createFromDiscriminatorValue(@jakarta.annotation.Nonnull final ParseNode parseNode) {
+    public static ModelListData createFromDiscriminatorValue(@jakarta.annotation.Nonnull final ParseNode parseNode) {
         Objects.requireNonNull(parseNode);
-        return new WithNameGetResponse();
+        return new ModelListData();
     }
     /**
      * Gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
@@ -69,18 +69,10 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
     public Map<String, java.util.function.Consumer<ParseNode>> getFieldDeserializers() {
         final HashMap<String, java.util.function.Consumer<ParseNode>> deserializerMap = new HashMap<String, java.util.function.Consumer<ParseNode>>(4);
         deserializerMap.put("created", (n) -> { this.setCreated(n.getLongValue()); });
-        deserializerMap.put("files", (n) -> { this.setFiles(n.getCollectionOfPrimitiveValues(String.class)); });
         deserializerMap.put("id", (n) -> { this.setId(n.getStringValue()); });
-        deserializerMap.put("tags", (n) -> { this.setTags(n.getCollectionOfPrimitiveValues(String.class)); });
+        deserializerMap.put("object", (n) -> { this.setObject(n.getStringValue()); });
+        deserializerMap.put("owned_by", (n) -> { this.setOwnedBy(n.getStringValue()); });
         return deserializerMap;
-    }
-    /**
-     * Gets the files property value. The files property
-     * @return a {@link java.util.List<String>}
-     */
-    @jakarta.annotation.Nullable
-    public java.util.List<String> getFiles() {
-        return this.files;
     }
     /**
      * Gets the id property value. The id property
@@ -91,12 +83,20 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
         return this.id;
     }
     /**
-     * Gets the tags property value. The tags property
-     * @return a {@link java.util.List<String>}
+     * Gets the object property value. The object property
+     * @return a {@link String}
      */
     @jakarta.annotation.Nullable
-    public java.util.List<String> getTags() {
-        return this.tags;
+    public String getObject() {
+        return this.objectEscaped;
+    }
+    /**
+     * Gets the owned_by property value. The owned_by property
+     * @return a {@link String}
+     */
+    @jakarta.annotation.Nullable
+    public String getOwnedBy() {
+        return this.ownedBy;
     }
     /**
      * Serializes information the current object
@@ -105,9 +105,9 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
     public void serialize(@jakarta.annotation.Nonnull final SerializationWriter writer) {
         Objects.requireNonNull(writer);
         writer.writeLongValue("created", this.getCreated());
-        writer.writeCollectionOfPrimitiveValues("files", this.getFiles());
         writer.writeStringValue("id", this.getId());
-        writer.writeCollectionOfPrimitiveValues("tags", this.getTags());
+        writer.writeStringValue("object", this.getObject());
+        writer.writeStringValue("owned_by", this.getOwnedBy());
         writer.writeAdditionalData(this.getAdditionalData());
     }
     /**
@@ -125,13 +125,6 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
         this.created = value;
     }
     /**
-     * Sets the files property value. The files property
-     * @param value Value to set for the files property.
-     */
-    public void setFiles(@jakarta.annotation.Nullable final java.util.List<String> value) {
-        this.files = value;
-    }
-    /**
      * Sets the id property value. The id property
      * @param value Value to set for the id property.
      */
@@ -139,10 +132,17 @@ public class WithNameGetResponse implements AdditionalDataHolder, Parsable {
         this.id = value;
     }
     /**
-     * Sets the tags property value. The tags property
-     * @param value Value to set for the tags property.
+     * Sets the object property value. The object property
+     * @param value Value to set for the object property.
      */
-    public void setTags(@jakarta.annotation.Nullable final java.util.List<String> value) {
-        this.tags = value;
+    public void setObject(@jakarta.annotation.Nullable final String value) {
+        this.objectEscaped = value;
+    }
+    /**
+     * Sets the owned_by property value. The owned_by property
+     * @param value Value to set for the owned_by property.
+     */
+    public void setOwnedBy(@jakarta.annotation.Nullable final String value) {
+        this.ownedBy = value;
     }
 }
