# src/main/java/com/docker/llmrunner/api/modelsrequests/Models.java
@@ -1,148 +1,0 @@
-package com.docker.llmrunner.api.modelsrequests;
-
-import com.microsoft.kiota.serialization.AdditionalDataHolder;
-import com.microsoft.kiota.serialization.Parsable;
-import com.microsoft.kiota.serialization.ParseNode;
-import com.microsoft.kiota.serialization.SerializationWriter;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Objects;
-@jakarta.annotation.Generated("com.microsoft.kiota")
-public class Models implements AdditionalDataHolder, Parsable {
-    /**
-     * Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
-     */
-    private Map<String, Object> additionalData;
-    /**
-     * The created property
-     */
-    private Long created;
-    /**
-     * The files property
-     */
-    private java.util.List<String> files;
-    /**
-     * The id property
-     */
-    private String id;
-    /**
-     * The tags property
-     */
-    private java.util.List<String> tags;
-    /**
-     * Instantiates a new {@link Models} and sets the default values.
-     */
-    public Models() {
-        this.setAdditionalData(new HashMap<>());
-    }
-    /**
-     * Creates a new instance of the appropriate class based on discriminator value
-     * @param parseNode The parse node to use to read the discriminator value and create the object
-     * @return a {@link Models}
-     */
-    @jakarta.annotation.Nonnull
-    public static Models createFromDiscriminatorValue(@jakarta.annotation.Nonnull final ParseNode parseNode) {
-        Objects.requireNonNull(parseNode);
-        return new Models();
-    }
-    /**
-     * Gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
-     * @return a {@link Map<String, Object>}
-     */
-    @jakarta.annotation.Nonnull
-    public Map<String, Object> getAdditionalData() {
-        return this.additionalData;
-    }
-    /**
-     * Gets the created property value. The created property
-     * @return a {@link Long}
-     */
-    @jakarta.annotation.Nullable
-    public Long getCreated() {
-        return this.created;
-    }
-    /**
-     * The deserialization information for the current model
-     * @return a {@link Map<String, java.util.function.Consumer<ParseNode>>}
-     */
-    @jakarta.annotation.Nonnull
-    public Map<String, java.util.function.Consumer<ParseNode>> getFieldDeserializers() {
-        final HashMap<String, java.util.function.Consumer<ParseNode>> deserializerMap = new HashMap<String, java.util.function.Consumer<ParseNode>>(4);
-        deserializerMap.put("created", (n) -> { this.setCreated(n.getLongValue()); });
-        deserializerMap.put("files", (n) -> { this.setFiles(n.getCollectionOfPrimitiveValues(String.class)); });
-        deserializerMap.put("id", (n) -> { this.setId(n.getStringValue()); });
-        deserializerMap.put("tags", (n) -> { this.setTags(n.getCollectionOfPrimitiveValues(String.class)); });
-        return deserializerMap;
-    }
-    /**
-     * Gets the files property value. The files property
-     * @return a {@link java.util.List<String>}
-     */
-    @jakarta.annotation.Nullable
-    public java.util.List<String> getFiles() {
-        return this.files;
-    }
-    /**
-     * Gets the id property value. The id property
-     * @return a {@link String}
-     */
-    @jakarta.annotation.Nullable
-    public String getId() {
-        return this.id;
-    }
-    /**
-     * Gets the tags property value. The tags property
-     * @return a {@link java.util.List<String>}
-     */
-    @jakarta.annotation.Nullable
-    public java.util.List<String> getTags() {
-        return this.tags;
-    }
-    /**
-     * Serializes information the current object
-     * @param writer Serialization writer to use to serialize this model
-     */
-    public void serialize(@jakarta.annotation.Nonnull final SerializationWriter writer) {
-        Objects.requireNonNull(writer);
-        writer.writeLongValue("created", this.getCreated());
-        writer.writeCollectionOfPrimitiveValues("files", this.getFiles());
-        writer.writeStringValue("id", this.getId());
-        writer.writeCollectionOfPrimitiveValues("tags", this.getTags());
-        writer.writeAdditionalData(this.getAdditionalData());
-    }
-    /**
-     * Sets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
-     * @param value Value to set for the AdditionalData property.
-     */
-    public void setAdditionalData(@jakarta.annotation.Nullable final Map<String, Object> value) {
-        this.additionalData = value;
-    }
-    /**
-     * Sets the created property value. The created property
-     * @param value Value to set for the created property.
-     */
-    public void setCreated(@jakarta.annotation.Nullable final Long value) {
-        this.created = value;
-    }
-    /**
-     * Sets the files property value. The files property
-     * @param value Value to set for the files property.
-     */
-    public void setFiles(@jakarta.annotation.Nullable final java.util.List<String> value) {
-        this.files = value;
-    }
-    /**
-     * Sets the id property value. The id property
-     * @param value Value to set for the id property.
-     */
-    public void setId(@jakarta.annotation.Nullable final String value) {
-        this.id = value;
-    }
-    /**
-     * Sets the tags property value. The tags property
-     * @param value Value to set for the tags property.
-     */
-    public void setTags(@jakarta.annotation.Nullable final java.util.List<String> value) {
-        this.tags = value;
-    }
-}
